--- a/styles.css
+++ b/styles.css
@@ -2,37 +2,38 @@
     box-sizing: border-box;
   }
   
-body{
-    margin: 0; 
+  body {
+    margin: 0;
     display: grid;
     grid-template-columns: repeat(2, 4rem);
     grid-template-rows: 7rem 2rem 7rem;
     gap: .5rem;
     cursor: pointer;
     justify-content: center;
+    padding-top: 1rem;
+  }
+  
+  .deck {
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
+    display: flex;
     justify-content: center;
-    padding-top:  1rem;
-}
-
-.deck{
-height: 100%;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-border: 1px solid black;
-font-size: 3rem;
-border-radius: .5rem;
-}
-
-.text{
+    align-items: center;
+    font-size: 3rem;
+    border-radius: .5rem;
+    color: black;
+    user-select: none;
+  }
+  
+  .text {
     grid-column: span 2;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.card{
+  }
+  
+  .card {
     position: relative;
     height: 100%;
     width: 100%;
@@ -42,30 +43,38 @@ border-radius: .5rem;
     justify-content: center;
     align-items: center;
     font-size: 4rem;
-}
-
-.card::before,
-.card::after{
+  }
+  
+  .card.red {
+    color: red;
+  }
+  
+  .card.black {
+    color: black;
+  }
+  
+  .card::before,
+  .card::after {
     position: absolute;
     content: attr(data-value);
     font-size: 1rem;
-
-}
-
-.card::before{
-top: .5rem;
-left: .5rem;
-}
-.card::after{
+  }
+  
+  .card::before {
+    top: .5rem;
+    left: .5rem
+  }
+  
+  .card::after {
     bottom: .5rem;
     right: .5rem;
-    transform: rotate(180deg);   
-}
+    transform: rotate(180deg);
+  }
 
-.card.red{
-    color: red;
-}
-
-.card.black{
-    color: black;
-}
+  .computer-deck {
+    background-color:palevioletred;
+  }
+  
+  .player-deck {
+    background-color:lightblue;
+  }
