index and style
button for play as guest works, buttons added to go home on multiple pages, css works for signup but is not pretty

--- a/public/style.css
+++ b/public/style.css
@@ -56,7 +56,7 @@ body {
   background-color: #2868c7;
     transition: background-color 0.2s;
 }
-/* sign up page css not currently working */
+/* sign up page css does not currently look all pretty */
 .signUp {
     width: 400px;
     background-color: #ffffff;
